@@ -1,5 +1,13 @@
 2008-02-11  Neal H. Walfield  <neal@gnu.org>
 
+	* server.c (OBJECT_): Use object_lookup_rel, not CAP_, to find
+	objects.
+	(ROOT): If ROOT_ADDR_ is not ADDR_VOID, use OBJECT to find the
+	thread.  If that fails, use SLOT, not CAP, to find the capability
+	slot.
+
+2008-02-11  Neal H. Walfield  <neal@gnu.org>
+
 	* ia32-crt0.S (_start): Clear EBP before jumping to cmain.
 
 2008-02-11  Neal H. Walfield  <neal@gnu.org>
